# image-codex

./: Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  package-lock.json  package.json  playbook.yml  traefik.yaml  vue.config.js
.github/workflows/: ci.yml  deploy-prod.yml  deploy.yml
ansible/: deploy.yml  install.yml  inventory.ini
backend/: .env  .pre-commit-config.yaml  Dockerfile  Dockerfile-alpine  Dockerfile-build  Makefile  README.md  cli.py  pyproject.toml
backend/image_codex/: __init__.py  config.ini  config.py  main.py  settings.toml
backend/image_codex/models/: __init__.py  api.py  compositions.py  geo.py  images.py  page.py  pages.py
backend/image_codex/routers/: compositions.py  geo.py  hash.py  images.py  root.py  tags.py
backend/image_codex/utils/: __init__.py  cloudinary.py  config.py  fastapi.py  pil.py
backend/tests/: test_image_codex.py
frontend/: .env.production  .gitignore  Dockerfile  Dockerfile-nginx  httpd.conf  oidc.secret.conf.template  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  i18n.ts  main.ts  shims-axios.d.ts  shims-custom.d.ts
frontend/src/assets/: categories.yaml
frontend/src/backend/: api.ts  configuration.ts  index.ts
frontend/src/components/: CompositionEditor.vue  ImageBrowser.vue  ImageItem.vue  ImageUpload.vue  ImagesMap.vue  Snackbar.vue  TagSelector.vue  TerritoryMap.vue
frontend/src/components/dialog/: AuthConfirmDialog.vue  ConfirmDialog.vue  ImageEditorDialog.vue
frontend/src/models/: api.ts  backend-image.ts  category-tree.ts  cursorPage.ts  image.ts  page.ts  upload-image.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/utils/: contants.ts  functions.ts
frontend/src/views/: About.vue  Home.vue  Territory.vue  Upload.vue  Workspace.vue
frontend/tests/unit/: example.spec.ts
src/: App.vue  shims-custom.ts
src/assets/: categories.yaml
src/components/: HelloWorld.vue  ImageItem.vue  ImageUpload.vue
src/models/: image.ts
src/utils/: contants.ts  rules.ts
src/views/: About.vue  Home.vue
territoryMap/: index.html  readme.md
territoryMap/data/: samples_images.geojson
territoryMap/js/: basemap.js  mapUtils.js  popUp.js
tests/unit/: example.spec.ts
