[tool.poetry]
name = "image-codex"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["David Tang <david.tang@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
cloudinary = "^1.26.0"
Pillow = "^9.0.0"
fastapi-pagination = "^0.10.0"
requests = "^2.26.0"
exif = "^1.3.2"
ImageHash = "^4.2.1"
dynaconf = "^3.1.7"
scipy = "^1.9.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
python-dotenv = {extras = ["cli"], version = "^0.21.0"}
flake8 = "^5.0.4"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
